--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
     </head>
     <body>
+            <h1>JOGO DA VELHA</h1>
             <div id="jogo">
                 <div class="linha">
                     <div class="casa" id="casa1"></div>
